--- a/breezenow-master/index.html
+++ b/breezenow-master/index.html
@@ -442,18 +442,18 @@
 
       <ul class="social-icon">
         <li class="social-icon__item">
-          <a class="social-icon__link" href="https://github.com/Nidhighura/">
+          <a class="social-icon__link" href="https://github.com/Riyaraghuwanshi/">
             <ion-icon name="logo-github"></ion-icon>
           </a>
         </li>
         <li class="social-icon__item">
-          <a class="social-icon__link" href="https://www.linkedin.com/in/nidhi-ghura-564939287">
+          <a class="social-icon__link" href="https://www.linkedin.com/in/riya-raghuwanshi-1444a2295">
             <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </li>
       </ul>
       <h3>BreezeNow</h3>
-      <p class="footer-text">Copyright &copy; 2025 | Made with &hearts; by Nidhi Ghura</p>
+      <p class="footer-text">Copyright &copy; 2025 | Made with &hearts; by Riya Raghuwanshi</p>
     </footer>
   </div>
 
